Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignBooleanBooleanWrapped.quorum
class Main
    action Main
        boolean bool = false
        output bool
    end
end