Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignIntObjBooleanWrapped.quorum
class main
    action Main
        Integer i = true
    end
end